update pom.xml for base